feat: Add PHP discovery and PHPUnit test generation support
- Implement PHP discovery integration to collect classes, interfaces, traits, and functions.
- Add scaffolding for generating PHPUnit test files from PHP code.
- Create a new PHP Quick Start Guide for users to understand the new features.
- Update CLI to handle PHP files and generate corresponding test files.
- Enhance the PHP discovery collector to traverse and extract metadata from PHP AST.
- Introduce example PHP files and a composer setup for testing.
- Remove unnecessary files and clean up the project structure.